fix(ResultsTableWrapper): bug with absence of scrollbar when results tables section is too small

--- a/frontend-37/src/components/ResultsTableWrapper.module.css
+++ b/frontend-37/src/components/ResultsTableWrapper.module.css
@@ -1,12 +1,14 @@
 .resTable {
-  width: 100%;
+  width: 99%;
   height: 100%;
   padding: 10px;
   gap: 10px;
+  margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
+  overflow: scroll;
   display: flex;
   flex-direction: column;
   overflow-x: auto;
   overflow-y: auto;
+  scrollbar-width: thin;
 }
